# debian-changelog-rs

./: Cargo.toml  README.md  deny.toml
.github/workflows/: deny.yml  rust.yml
examples/: build.rs  dch.rs  simple.rs
src/: bugs.rs  changes.rs  lex.rs  lib.rs  parse.rs  textwrap.rs
tests/: builder_tests.rs  display_tests.rs  parse_type.rs
