[package]
name = "debian-changelog"
repository = "https://github.com/jelmer/debian-changelog-rs"
description = "Parser for Debian changelog files"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
authors = [ "Jelmer Vernooij <jelmer@jelmer.uk>",]

[dependencies]
chrono = "0.4.41"
debversion = ">=0.2"
lazy-regex = ">=2"
log = "0.4"
rowan = "0.16.1"
textwrap = "0.16.2"
whoami = { version = "1", default-features = false }

[dev-dependencies]
flate2 = "1.1"
maplit = "1.0.2"
tempfile = "3.8"
