[package]
name = "debian-changelog"
repository = "https://github.com/jelmer/debian-changelog-rs"
description = "Parser for Debian changelog files"
version = "0.2.10"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
authors = [ "Jelmer Vernooij <jelmer@jelmer.uk>",]

[dependencies]
chrono = "0.4.42"
debversion = ">=0.4.6, <0.6"
lazy-regex = ">=3, <4"
log = "0.4"
rowan = "0.16.1"
textwrap = "0.16.2"
whoami = { version = ">=1.5, <2", default-features = false }

[dev-dependencies]
flate2 = "1.1"
maplit = "1.0.2"
tempfile = "3.23"
