[package]
name = "debian-changelog"
repository = "https://github.com/jelmer/debian-changelog-rs"
description = "Parser for Debian changelog files"
version = "0.2.14"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
authors = [ "Jelmer Vernooij <jelmer@jelmer.uk>",]

[dependencies]
chrono = { version = "0.4.44", optional = true }
debversion = ">=0.4.6, <0.6"
lazy-regex = ">=3, <4"
log = "0.4"
rowan = "0.16.1"
textwrap = "0.16.2"
whoami = { version = ">=1.5, <2", default-features = false }

[features]
default = ["chrono"]

[dev-dependencies]
flate2 = "1.1"
maplit = "1.0.2"
tempfile = "3.25"

[[example]]
name = "build"
required-features = ["chrono"]

[[example]]
name = "dch"
required-features = ["chrono"]
